--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SpeedWurdz - Multiplayer Word Game</title>
     <link rel="stylesheet" href="styles.css">
+    
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6677679700714967"
+         crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
